plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.14'
}

repositories {
    mavenCentral()
}

dependencies {
    // Driver JDBC para PostgreSQL
    implementation 'org.postgresql:postgresql:42.7.2'

    // Para o .env
    implementation 'io.github.cdimascio:dotenv-java:3.0.0'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

javafx {
    version = '21.0.1'
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    // Define the main class for the application.
    mainClass = 'hunkydory.Main'
    mainModule = 'hunkydory'
}